// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip renders a light chip 1`] = `
<span
  className="chip chip-light"
>
  Light message
</span>
`;

exports[`Chip renders a primary chip 1`] = `
<span
  className="chip chip-primary"
>
  Primary message
</span>
`;

exports[`Chip renders a primary chip by default 1`] = `
<span
  className="chip chip-primary"
>
  Message
</span>
`;

exports[`Chip renders an alert chip 1`] = `
<span
  className="chip chip-alert"
>
  Alert message
</span>
`;

exports[`Chip renders default if type is invalid 1`] = `
<span
  className="chip chip-primary"
>
  Message
</span>
`;
